# Gazebo-exercise

./: Exercise_code_style.md  README.md
Test_cases/Hector_Quadrotor_Case/: README.md  TEST_RESULT.md
Test_cases/Hector_Quadrotor_Case/src/: CMakeLists.txt
Test_cases/Hector_Quadrotor_Case/src/hector_quadrotor/hector/: CMakeLists.txt  package.xml
Test_cases/Hector_Quadrotor_Case/src/hector_quadrotor/hector/cfg/: Controller.cfg  Follower.cfg
Test_cases/Hector_Quadrotor_Case/src/hector_quadrotor/hector/include/: controller_base.h  controller_base99.h  controller_example.h  controller_example99.h  estimator_base.h  estimator_base_99pub.h  estimator_base_statesub.h  estimator_base_updata_statesub.h  estimator_example.h  path_follower_base.h  path_follower_example.h  path_manager_base.h  path_manager_example.h  path_point_transfer.h  pseudo_controller_base.h  pseudo_controller_example.h  udp_recv_image.h  udp_send_image.h
Test_cases/Hector_Quadrotor_Case/src/hector_quadrotor/hector/src/: controller_base.cpp  controller_base99.cpp  controller_example.cpp  controller_example99.cpp  estimator_base.cpp  estimator_base_99pub.cpp  estimator_base_statesub.cpp  estimator_base_updata_statesub.cpp  estimator_example.cpp  path_follower_base.cpp  path_follower_example.cpp  path_manager_base.cpp  path_manager_example.cpp  path_planner.cpp  path_point_transfer.cpp  pseudo_controller_base.cpp  pseudo_controller_example.cpp  udp_recv_image.cpp  udp_send_image.cpp  udp_send_state.cpp
Test_cases/Hector_Quadrotor_Case/src/hector_quadrotor/hector_msgs/: CMakeLists.txt  package.xml
Test_cases/Hector_Quadrotor_Case/src/hector_quadrotor/hector_msgs/msg/: Controller_Commands.msg  Current_Path.msg  Down_Data_New.msg  Formation_Type.msg  Goal_Info.msg  State.msg  State29.msg  Up_Data_New.msg  Waypoint (复件).msg  Waypoint.msg
Test_cases/Hector_Quadrotor_Case/src/hector_quadrotor/hector_quadrotor_controller/launch/: controller.launch
Test_cases/Hector_Quadrotor_Case/src/hector_quadrotor/hector_quadrotor_controller/src/: twist_controller.cpp
Test_cases/Hector_Quadrotor_Case/src/hector_quadrotor/hector_quadrotor_description/meshes/: box.gazebo.xacro  box.urdf.xacro  box_base.urdf.xacro
Test_cases/Hector_Quadrotor_Case/src/hector_quadrotor/hector_quadrotor_description/urdf/: box.gazebo.xacro  box.urdf.xacro  box_base.urdf.xacro  generic_camera.urdf.xacro  my_robot.urdf  quadrotor_base.urdf.xacro  quadrotor_downward_cam.gazebo.xacro  quadrotor_downward_cam.urdf.xacro
Test_cases/Hector_Quadrotor_Case/src/hector_quadrotor/hector_quadrotor_gazebo/launch/: hector_quadrotor_one_node_0.launch  hector_quadrotor_one_node_1.launch  hector_quadrotor_one_node_20.launch  hector_quadrotor_one_node_30.launch  spawn_quadrotor.launch
Test_cases/TestCaseForGazeboExercise/: README
Test_cases/TestCaseForGazeboExercise/src/quadrotorsim/: CMakeLists.txt  package.xml
Test_cases/TestCaseForGazeboExercise/src/quadrotorsim/launch/: hector_quadrotor_1000_uav.launch  hector_quadrotor_200_uav.launch  hector_quadrotor_300_uav.launch  hector_quadrotor_400_uav.launch  hector_quadrotor_500_uav.launch  hector_quadrotor_one_uav.launch  quadrotor_with_camera_100.launch  quadrotor_without_camera_100.launch  ros_quadrotor_with_camera_100.launch  ros_quadrotor_without_camera_100.launch  spawn_quadrotor.launch
Test_cases/TestCaseForGazeboExercise/src/quadrotorsim/src/: action_controller.cpp  takeoff.cpp  takeoff_ros.cpp
Test_cases/TestCaseForGazeboExercise/src/quadrotorsim/worlds/: empty_world.launch  kunming_airport.world  quad_1000.world  quad_200.world  quad_20_uav.world  quad_300.world  quad_30_uav.world  quad_400.world  quad_500.world  quad_one_uav.world  quad_with_camera_100.world  quad_without_camera_100.world  ros_quad_with_camera_100.world  ros_quad_without_camera_100.world
Test_cases/models/quadrotor_with_camera/: model-1_4.sdf  model.config  model.sdf
gazebo7_7.14.0_exercise/: CMakeLists.txt  Exercise_Changelog.md  Exercise_README.md
gazebo7_7.14.0_exercise/gazebo/: Server.cc
gazebo7_7.14.0_exercise/gazebo/common/: CMakeLists.txt  Event.hh  Events.cc  Events.hh
gazebo7_7.14.0_exercise/gazebo/physics/: World.cc  World.hh  WorldPrivate.hh
gazebo7_7.14.0_exercise/gazebo/physics/ode/: ODEPhysics.cc
thirdparty_pkg/ign-math/.hg/: dirstate  hgrc  undo.desc
thirdparty_pkg/ign-math/.hg/cache/: branch2-served  hgtagsfnodes1  rbc-names-v1  rbc-revs-v1  tags2-visible
thirdparty_pkg/ign-math/.hg/store/: 00changelog.d  00changelog.i  00manifest.d  00manifest.i  fncache  undo  undo.phaseroots
thirdparty_pkg/ign-math/.hg/store/data/: _a_u_t_h_o_r_s.i  _c_make_lists.txt.i  _c_o_p_y_i_n_g.i  _changelog.md.i  _l_i_c_e_n_s_e.i  _migration.md.i  _n_e_w_s.i  _r_e_a_d_m_e.md.i  api.md.in.i  appveyor.yml.i  bitbucket-pipelines.yml.i  codecov.yml.i  configure.bat.i  tutorials.md.in.i  ~2ehgignore.i  ~2ehgtags.i
thirdparty_pkg/libevent-2.1.10-stable/: Makefile  Makefile.in  ReadMe  autogen.sh  config.h  config.status  configure  libevent_openssl.pc  libevent_pthreads.pc  libtool
thirdparty_pkg/libevent-2.1.10-stable/autom4te.cache/: output.1  requests  traces.0  traces.1
thirdparty_pkg/protobuf-2.6.1/: Makefile  config.status  libtool
thirdparty_pkg/protobuf-2.6.1/gtest/: Makefile  config.status  libtool
thirdparty_pkg/protobuf-2.6.1/src/: Makefile  protoc
thirdparty_pkg/protobuf-2.6.1/src/.libs/: libprotobuf-lite.so.9  libprotoc.la  lt-protoc  protoc
thirdparty_pkg/sdformat/: Exercise_SDF_README.md
thirdparty_pkg/sdformat/sdf/1.0/: CMakeLists.txt  event.sdf  server.sdf
thirdparty_pkg/sdformat/sdf/1.2/: CMakeLists.txt  exercise_opt.sdf
thirdparty_pkg/sdformat/sdf/1.3/: CMakeLists.txt
thirdparty_pkg/sdformat/sdf/1.4/: CMakeLists.txt
thirdparty_pkg/sdformat/sdf/1.5/: CMakeLists.txt  world.sdf
thirdparty_pkg/sdformat/sdf/1.6/: CMakeLists.txt  event (复件).sdf  exercise_opt (copy).sdf  server (复件).sdf
(+430 files in other folders)
